--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -13,5 +13,7 @@
     "categories":"الأقسام",
     "no_results":"لا يوجد نتائج !!",
     "no_news":"لا يوجد أخبار متاحة !!",
+    "news_content":"الخبر",
+    "view_full_article":"عرض الخبر كاملا",
     "category_leading":"اختر القسم المفضل لديك :"
 }
